--- a/mapa/src/app/app.component.html
+++ b/mapa/src/app/app.component.html
@@ -2,5 +2,29 @@
 <h1> {{texto}}</h1>
 
 <agm-map [latitude]="lat" [zoom]="zoom" [longitude]="lng">
-  <agm-marker  [latitude]="lat" [longitude]="lng"></agm-marker>
+  <agm-marker *ngFor="let m of markers; let i = index"
+  [latitude]="m.lat"
+  [longitude]="m.lng"
+  [label]="m.label"
+  [markerDraggable]="m.draggable"
+  [iconUrl]="m.icon"
+  >
+  <agm-info-window #infoWindow>
+    <div class="card" style="width: 18rem;">
+      <img class="card-img-top" src="../assets/img/logo_CONSEG.png" alt="Dados do Conselheiro" style="height: 10em;">
+      <div class="card-body">
+
+        <h5 class="card-title">Conselheiro: <strong>{{m.cliente}}</strong></h5>
+        <h5 class="card-title">Endereço: <strong>{{m.endereco}}</strong></h5>
+        <h5 class="card-title">Telefone: <strong>{{m.telefone}}</strong></h5>
+        <h5 class="card-title">Email: <strong>{{m.email}}</strong></h5>
+
+        <!-- <div class="d-flex justify-content-center">
+          <button (click)="fechaWindow()" class="btn btn-secondary btn-sm">Fechar</button>
+        </div> -->
+      </div>
+    </div>
+
+  </agm-info-window>
+</agm-marker>
 </agm-map>
