--- a/mapa/src/mapa/mapa-view/mapa-view.component.html
+++ b/mapa/src/mapa/mapa-view/mapa-view.component.html
@@ -1,9 +1,6 @@
 
 
-<router-outlet></router-outlet>
-
-
-<!-- <agm-map [latitude]="lat" [zoom]="zoom" [longitude]="lng">
+<agm-map [latitude]="lat" [zoom]="zoom" [longitude]="lng">
   <agm-marker *ngFor="let m of markers; let i = index"
   [latitude]="m.lat"
   [longitude]="m.lng"
@@ -27,4 +24,4 @@
 
   </agm-info-window>
 </agm-marker>
-</agm-map> -->
+</agm-map>
