--- a/mapa/src/mapa/mapa-view/mapa-view.component.html
+++ b/mapa/src/mapa/mapa-view/mapa-view.component.html
@@ -1,27 +1,33 @@
+<div class="container-fluid flex-grow-1 container-p-y">
 
+  <div class="mapa-estatico" *ngIf ="google_key">
+    <h1>Mapa estático para demonstração (sem Google_key):</h1>
+      <img class="card-img-top" src="../assets/img/mapa_estatico.png" alt="mapa estatico" >
+  </div>
 
-<agm-map [latitude]="lat" [zoom]="zoom" [longitude]="lng">
-  <agm-marker *ngFor="let m of markers; let i = index"
-  [latitude]="m.lat"
-  [longitude]="m.lng"
-  [label]="m.label"
-  [markerDraggable]="m.draggable"
-  [iconUrl]="m.icon"
-  >
-  <agm-info-window #infoWindow>
-    <div class="card" style="width: 18rem;">
-      <img class="card-img-top" src="../assets/img/logo_CONSEG.png" alt="Dados do Conselheiro" style="height: 10em;">
-      <div class="card-body">
+  <div class="mapa-dinamico" *ngIf !="google_key" >
+    <agm-map [latitude]="lat" [zoom]="zoom" [longitude]="lng">
+      <agm-marker *ngFor="let m of markers; let i = index"
+      [latitude]="m.lat"
+      [longitude]="m.lng"
+      [label]="m.label"
+      [markerDraggable]="m.draggable"
+      [iconUrl]="m.icon"
+      >
+      <agm-info-window #infoWindow>
+        <div class="card" style="width: 18rem;">
+          <img class="card-img-top" src="../assets/img/logo_CONSEG.png" alt="Dados do Conselheiro" style="height: 10em;">
+          <div class="card-body">
 
-        <h5 class="card-title">Conselheiro: <strong>{{m.cliente}}</strong></h5>
-        <h5 class="card-title">Endereço: <strong>{{m.endereco}}</strong></h5>
-        <h5 class="card-title">Telefone: <strong>{{m.telefone}}</strong></h5>
-        <h5 class="card-title">Email: <strong>{{m.email}}</strong></h5>
+            <h5 class="card-title">Conselheiro: <strong>{{m.cliente}}</strong></h5>
+            <h5 class="card-title">Endereço: <strong>{{m.endereco}}</strong></h5>
+            <h5 class="card-title">Telefone: <strong>{{m.telefone}}</strong></h5>
+            <h5 class="card-title">Email: <strong>{{m.email}}</strong></h5>
+          </div>
+        </div>
+      </agm-info-window>
+    </agm-marker>
+    </agm-map>
+  </div>
+</div>
 
-
-      </div>
-    </div>
-
-  </agm-info-window>
-</agm-marker>
-</agm-map>
